--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
     "@discordjs/voice": "^0.14.0",
+    "@distube/soundcloud": "^1.3.0",
+    "@distube/spotify": "^1.5.1",
+    "@distube/yt-dlp": "^1.1.3",
     "discord.js": "^14.7.1",
+    "distube": "^4.0.4",
     "dotenv": "^16.0.3",
     "libsodium-wrappers": "^0.7.10",
     "lzutf8": "^0.6.3",
     "mongodb": "^4.13.0",
+    "opusscript": "^0.0.8",
     "play-dl": "^1.9.6"
   }
 }
