--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "dotenv": "^16.0.3",
     "libsodium-wrappers": "^0.7.10",
     "lzutf8": "^0.6.3",
-    "mongodb": "^4.13.0",
-    "opusscript": "^0.0.8",
-    "play-dl": "^1.9.6"
+    "mongodb": "^4.13.0"
   }
 }
